# homelab-mcp-server

./: Dockerfile  README.md  cloudbuild.yaml  proxmox_tools.py  pyproject.toml  server.py
